(lang dune 3.14)

(name brc_ocaml)

(generate_opam_files true)

(source
 (github asher-gh/brc_ocaml))

(authors "Asher")

(maintainers "Asher")

(license LICENSE)


(package
 (name brc_ocaml)
 (synopsis "1 Billion Row Challenge in OCaml")
 (depends ocaml dune))

; See the complete stanza dhttps://dune.readthedocs.io/en/stable/dune-files.html#dune-projectocs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project

